[gd_scene load_steps=10 format=3 uid="uid://bhny4m75t3873"]

[ext_resource type="Texture2D" uid="uid://c8nuoahfrc1b3" path="res://assets/grafiikka/green_32x16.png" id="1_nfao4"]
[ext_resource type="Script" path="res://scenes/enemy_2.gd" id="1_ykvv4"]
[ext_resource type="AudioStream" uid="uid://dc101di0pnqxk" path="res://assets/äänet/distorted-impact-explosion-185554.mp3" id="3_qba5p"]
[ext_resource type="AudioStream" uid="uid://dee7a2qubh0ha" path="res://assets/äänet/game-over-arcade-6435.mp3" id="4_myper"]
[ext_resource type="AudioStream" uid="uid://ccs7ps4ka286s" path="res://assets/äänet/enemy-encounter-225560.mp3" id="5_wh382"]
[ext_resource type="AudioStream" uid="uid://cgm4k102mn88l" path="res://assets/äänet/8-bit-explosion-95847.mp3" id="6_qerd4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uvjf2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_nfao4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"tuho",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bwdnd"]
radius = 40.0125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sn7ql"]
size = Vector2(164, 89)

[node name="Enemy2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_ykvv4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_uvjf2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, 3)
shape = SubResource("CircleShape2D_bwdnd")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 267

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, 2.5)
shape = SubResource("RectangleShape2D_sn7ql")

[node name="EnemyTuho" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qba5p")
volume_db = 1.131
pitch_scale = 1.51

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_myper")

[node name="EnemySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wh382")
volume_db = -1.575
autoplay = true
max_distance = 800.0
parameters/looping = true

[node name="BulletHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qerd4")
volume_db = -6.029

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
